# notalking

./: .gitignore  AGENTS.md  Justfile  README.md  docker-compose.yml
.agents/rules/: architecture.mdc  no-noise-rule.mdc  no-stupid-comments.mdc
common/proto/notalking/v1/: core.proto
core/: Cargo.toml  Justfile  README.md  build.rs
core/crates/editor/: Cargo.toml  README.md
core/crates/editor/src/: block.rs  content.rs  lib.rs  text.rs
core/migrations/: 0001_create_users_table.down.sql  0001_create_users_table.sql  0002_create_notes_table.down.sql  0002_create_notes_table.sql
core/migrations/postgres/: 20250429100000_initial.sql
core/migrations/sqlite/: 20250429100000_initial.sql
core/src/: config.rs  grpc_server.rs  main.rs  mcp.rs  nats_bridge.rs
core/src/auth/: mod.rs  password.rs  service.rs
core/src/db/: mod.rs  store.rs
core/src/embedding/: http_provider.rs  mod.rs  qdrant_store.rs  runtime.rs
core/src/http/: errors.rs  handlers.rs  logging.rs  mod.rs  rate_limit.rs  router.rs  state.rs
core/src/note/: block_repo.rs  blocks.rs  in_memory.rs  mod.rs  repo.rs  service.rs
core/src/persist/: mod.rs  note_store.rs  session_repo.rs  user_repo.rs
core/src/session/: in_memory.rs
core/src/user/: in_memory.rs  mod.rs  repo.rs  sqlite.rs  trace.rs
docs/: GIT.md
docs/releases/: v0.2.1.md  v0.3.md
intelligence/: .gitignore  Justfile  README.md  pyproject.toml
intelligence/migrations/: README.md
intelligence/modules/: utils.py
intelligence/src/notalking/v1/: core_pb2.py  core_pb2_grpc.py
intelligence/src/notalking_intelligence/: __init__.py  __main__.py  app.py  config.py  core_bridge.py  deps.py  github_models.py  http_utils.py  logging.py  metrics.py  provider_kinds.py
intelligence/src/notalking_intelligence/adapters/: openai_stream.py  v2t_stub.py
intelligence/src/notalking_intelligence/chat/: registry.py
intelligence/src/notalking_intelligence/db/: models.py  session.py
intelligence/src/notalking_intelligence/routes/: chat.py  health.py  providers.py  v2t.py
web/: Justfile  README.md  nuxt.config.ts  package.json
web/app/assets/styles/: fonts.css  main.css  tailwind.css
web/app/components/: AgentPanel.vue  SemanticSearchDialog.vue  SessionsPanel.vue  SettingsModal.vue
web/app/components/editor/: EditorFormattingBubble.vue  EditorTextBlock.vue  NoteEditor.vue
web/app/components/ui/: AppIcon.vue  AppLogo.vue
web/app/composables/: useCoreApi.ts  useIntelChat.ts  useIntelligenceStatus.ts
web/app/pages/: app.vue  index.vue  login.vue  register.vue
web/app/stores/: session.ts
web/app/types/: core.ts  editor.ts
web/app/utils/: coreErrors.ts
web/server/middleware/: 00-core-proxy.ts
