[package]
name = "notalking"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[workspace]
members = ["crates/editor"]
resolver = "2"

[workspace.dependencies]
chrono = "0.4.44"
uuid = { version = "1.22.0", features = ["v4", "serde"] }

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
axum = "0.8.8"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
chrono = { workspace = true }
uuid = { workspace = true }
editor = { path = "crates/editor" }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "postgres",
    "chrono",
    "uuid",
    "migrate",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.15.1"
base64 = "0.22.1"
thiserror = "2.0.17"
anyhow = "1.0.100"
log = "0.4.29"
clap = { version = "4.5.53", features = ["derive", "env"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
argon2 = "0.5.3"
rand_core = { version = "0.6.4", features = ["std"] }
redis = { version = "0.32.7", features = ["tokio-comp", "connection-manager"] }
qdrant-client = "1.16.0"
reqwest = { version = "0.12.28", default-features = false, features = [
    "json",
    "rustls-tls",
] }
tonic = "0.12.3"
prost = "0.13.5"
prost-types = "0.13.5"
async-nats = "0.42.0"
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.0"
http-body-util = "0.1.3"
futures = "0.3.31"
rmcp = { version = "0.12.0", features = ["transport-io", "transport-streamable-http-server"] }
schemars = { version = "1.0", features = ["derive"] }

[build-dependencies]
tonic-build = "0.12.3"
