[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notalking-intelligence"
version = "0.1.0"
description = "Notalking Intelligence service (LLM, voice-to-text)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "prometheus-client>=0.21.0",
    "grpcio>=1.68.0",
    "grpcio-tools>=1.68.0",
    "python-multipart>=0.0.17",
]

[project.scripts]
notalking-intelligence = "notalking_intelligence.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/notalking_intelligence", "src/notalking"]

[tool.hatch.build.targets.sdist]
include = ["src/notalking_intelligence", "src/notalking"]
